# cdk-pipelines-workshop

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml
project_ccr/: project_ccr_stack.py
tests/unit/: test_project_ccr_stack.py
